# generate-resources

./: Home.py  README.md  download_source.py  parse_downloads_page.py  pyproject.toml  streamlit_app.py
.github/workflows/: test.yml
tests/: test_home_app.py  test_parse_downloads.py
tests/assets/: downloads.html
