[tool.poetry]
name = "generate-resources"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
beautifulsoup4 = "^4.12.3"
peclasses = {version = "^0.4.0", source = "dfint"}
dfint64-patch = {version = "^0.1.0", source = "dfint"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"


[[tool.poetry.source]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "streamlit run Home.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
