[tool.poetry]
name = "generate-resources"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.42.2"
beautifulsoup4 = "^4.12.3"
dfint64-patch = {version = "^0.2.0", source = "dfint"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.9"

[[tool.poetry.source]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "streamlit run Home.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # Ignore all documentation warnings. Probably not the best option in real projects.
    "SIM115",
    "N999",  # Allow non-pep8 module names
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN201",  # Don't warn on missing return type annotation in tests
]
